--- a/index.html
+++ b/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Brand</title>
-    <meta name="description" content="Web design and web development studio">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Lato:100,400" rel="stylesheet">
-    <link rel="stylesheet" href="icons/icons.css">
-    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#" title="Brand logo">
-            <img src="img/logo.png" alt="Brand logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mainMenu">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Services</a>
-            <a class="nav-item nav-link" href="#">Portfolio</a>
-            <a class="nav-item nav-link" href="#">Contact</a>
-          </div>
-        </div>
-      </nav>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <title>Brand</title>
+  <meta name="description" content="Web design and web development studio">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Lato:100,400" rel="stylesheet">
+  <link rel="stylesheet" href="icons/icons.css">
+  <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+  <!-- MAIN NAV STARTS -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#" title="Brand logo">
+      <img src="img/logo.png" alt="Brand logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mainMenu">
+      <div class="navbar-nav ml-auto">
+        <a class="nav-item nav-link active" href="#">Home
+          <span class="sr-only">(current)</span>
+        </a>
+        <a class="nav-item nav-link" href="#">Services</a>
+        <a class="nav-item nav-link" href="#">Portfolio</a>
+        <a class="nav-item nav-link" href="#">Contact</a>
+      </div>
+    </div>
+  </nav>
+  <!-- MAIN NAV ENDS -->
+
+  <!-- HEADER STARTS -->
+    <header id="header">
+      <div class="caption-header">
+          <h1>Welcome to Brand<br>
+            <span>Web design and development</span>
+          </h1>
+          <a href="#services">Learn more</a>
+      </div>
+      
+    </header>
+  <!-- HEADER ENDS -->
+  <script src="js/jquery.min.js"></script>
+  <script src="dist/js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
