--- a/index.html
+++ b/index.html
@@ -36,16 +36,45 @@
   <!-- MAIN NAV ENDS -->
 
   <!-- HEADER STARTS -->
-    <header id="header">
-      <div class="caption-header">
-          <h1>Welcome to Brand<br>
-            <span>Web design and development</span>
-          </h1>
-          <a href="#services">Learn more</a>
-      </div>
-      
-    </header>
+  <header id="header">
+    <div class="caption-header">
+      <h1>Welcome to Brand
+        <br>
+        <span>Web design and development</span>
+      </h1>
+      <a href="#services">Learn more</a>
+    </div>
+
+  </header>
   <!-- HEADER ENDS -->
+
+  <!-- SERVICES START -->
+  <section id="services" class="container">
+    <div class="row">
+      <div class="col-12">
+        <h2>Services</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, dolore!</p>
+      </div>
+    </div>
+    <div class="row">
+      <article class="col-md-4">
+        <i class="icon-cart"></i>
+        <h3>E-commerce</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus omnis, porro veniam natus in non consequuntur. Suscipit, perferendis pariatur.</p>
+      </article>
+      <article class="col-md-4">
+        <i class="icon-display"></i>
+        <h3>Responsive</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum consectetur inventore autem pariatur iste excepturi magnam assumenda placeat maiores ipsam.</p>
+      </article>
+      <article class="col-md-4">
+        <i class="icon-lock"></i>
+        <h3>Security</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus laudantium quisquam et minus cum voluptate possimus eveniet ad deserunt impedit.</p>
+      </article>
+    </div>
+  </section>
+  <!-- SERVICES ENDS -->
   <script src="js/jquery.min.js"></script>
   <script src="dist/js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
