--- a/index.html
+++ b/index.html
@@ -60,21 +60,61 @@
       <article class="col-md-4">
         <i class="icon-cart"></i>
         <h3>E-commerce</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus omnis, porro veniam natus in non consequuntur. Suscipit, perferendis pariatur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus omnis, porro veniam natus in non consequuntur.
+          Suscipit, perferendis pariatur.</p>
       </article>
       <article class="col-md-4">
         <i class="icon-display"></i>
         <h3>Responsive</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum consectetur inventore autem pariatur iste excepturi magnam assumenda placeat maiores ipsam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum consectetur inventore autem pariatur iste excepturi
+          magnam assumenda placeat maiores ipsam.</p>
       </article>
       <article class="col-md-4">
         <i class="icon-lock"></i>
         <h3>Security</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus laudantium quisquam et minus cum voluptate possimus eveniet ad deserunt impedit.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus laudantium quisquam et minus cum voluptate possimus
+          eveniet ad deserunt impedit.</p>
       </article>
     </div>
   </section>
   <!-- SERVICES ENDS -->
+
+  <!-- PORTFOLIO START -->
+  <section id="portfolio" class="container">
+    <div class="row">
+      <div class="col-12">
+        <h2>Portfolio</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, dolore!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <figure>
+          <img src="img/foto1.jpg" class="img-fluid" alt="">
+          <figcaption>
+            <h4>Issue #1</h4>
+            <h5>Web Design</h5>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4">
+
+      </div>
+    </div>
+  </section>
+  <!-- PORTFOLIO ENDS -->
   <script src="js/jquery.min.js"></script>
   <script src="dist/js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
