--- a/index.html
+++ b/index.html
@@ -98,19 +98,49 @@
         </figure>
       </div>
       <div class="col-md-4">
-
+        <figure>
+          <img src="img/foto1.jpg" class="img-fluid" alt="">
+          <figcaption>
+            <h4>Issue #2</h4>
+            <h5>Web Design</h5>
+          </figcaption>
+        </figure>
       </div>
       <div class="col-md-4">
-
+        <figure>
+          <img src="img/foto1.jpg" class="img-fluid" alt="">
+          <figcaption>
+            <h4>Issue #3</h4>
+            <h5>Web Design</h5>
+          </figcaption>
+        </figure>
       </div>
       <div class="col-md-4">
-
+        <figure>
+          <img src="img/foto1.jpg" class="img-fluid" alt="">
+          <figcaption>
+            <h4>Issue #4</h4>
+            <h5>Web Design</h5>
+          </figcaption>
+        </figure>
       </div>
       <div class="col-md-4">
-
+        <figure>
+          <img src="img/foto1.jpg" class="img-fluid" alt="">
+          <figcaption>
+            <h4>Issue #5</h4>
+            <h5>Web Design</h5>
+          </figcaption>
+        </figure>
       </div>
       <div class="col-md-4">
-
+        <figure>
+          <img src="img/foto1.jpg" class="img-fluid" alt="">
+          <figcaption>
+            <h4>Issue #6</h4>
+            <h5>Web Design</h5>
+          </figcaption>
+        </figure>
       </div>
     </div>
   </section>
